--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 .content {
-    position: relative;
-    z-index: 3;
-  }
-  #no{
-    position: absolute;
-    display: inline-block;
-    left: 35%; 
-    top: 40vh;
-    -webkit-transition: all 0.1s ease-out;
-  }
-  #yes{
-    position: absolute;
-    display: inline-block;
-    left: 70%; 
-    top: 40vh;
-    -webkit-transition: all 0.3s ease-out;
-  }
-#bg{
+  position: relative;
+  z-index: 3;
+}
+#no {
+  position: absolute;
+  display: inline-block;
+  left: 35%;
+  top: 40vh;
+  -webkit-transition: all 0.1s ease-out;
+}
+#yes {
+  position: absolute;
+  display: inline-block;
+  left: 70%;
+  top: 40vh;
+  -webkit-transition: all 0.3s ease-out;
+}
+#bg {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  opacity: .8;
+  opacity: 0.8;
   /* height: 100vh; */
   z-index: 0;
   background-repeat: no-repeat;
@@ -33,7 +33,8 @@
   background-position: 50%;
   -webkit-filter: blur(4px);
 }
-.swal2-title, .swal2-content{
+.swal2-title,
+.swal2-content {
   color: azure !important;
 }
 .swal2-popup {
@@ -41,43 +42,43 @@
 }
 
 header h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 50px;
   font-weight: 600;
   text-align: center;
-	margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 header h4 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-align: center;
 }
 
 @media only screen and (max-width: 500px) {
   header h2 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 32px;
     font-weight: 600;
     text-align: center;
     margin-bottom: 30px;
   }
   header h4 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     text-align: center;
     padding: 15px;
   }
-  #no{
+  #no {
     position: absolute;
     display: inline-block;
-    left: 7%; 
+    left: 7%;
     top: 40vh;
     font-size: 14px;
     padding: 3px;
     -webkit-transition: all 0.1s ease-out;
   }
-  #yes{
+  #yes {
     position: absolute;
     display: inline-block;
-    left: 58%; 
+    left: 58%;
     top: 40vh;
     font-size: 14px;
     padding: 3px;
